kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qat-bench-nginx
  namespace: qat-bench
  labels:
    app: qat-bench-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qat-bench-nginx
  template:
    metadata:
      labels:
        app: qat-bench-nginx
    spec:
      containers:
        - name: nginx
          image: registry.access.redhat.com/ubi9/nginx-124:latest
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/bench.conf
              subPath: bench.conf
      volumes:
        - name: config
          configMap:
            name: qat-bench-nginx-config
